update the design

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -7,11 +7,13 @@
 
 body {
   height: 100vh;
-  font-family: "Poppins";
+  font-family: "Open Sans", sans-serif;
+  background: url("../images/Awesome-Blue-Rain-ipad-air.jpg") no-repeat;
+  background-size: cover;
 }
 
 .container {
-  padding: 0 2rem;
+  padding: 0 1rem;
   margin: 0 auto;
   width: 1200px;
   max-width: 100%;
@@ -54,7 +56,10 @@ body {
   width: fit-content;
   border-radius: 10px;
   border: 1px solid #0080ff;
+  box-shadow: 0 0 20px #0080ff;
   padding: 30px;
+  background: rgba(0, 0, 0, 0.2);
+  color: white;
 }
 
 .form .login-container {
@@ -81,10 +86,12 @@ body {
 .form .login-container input::-moz-placeholder, textarea::-moz-placeholder {
   color: #777;
   letter-spacing: 1px;
+  font-family: "Open Sans";
 }
 .form .login-container input::placeholder, textarea::placeholder {
   color: #777;
   letter-spacing: 1px;
+  font-family: "Open Sans";
 }
 
 .form .login-container label {
