--- a/CSS/style.css
+++ b/CSS/style.css
@@ -72,6 +72,8 @@ body {
 }
 
 .form .login-container input, textarea {
+  background-color: transparent;
+  color: white;
   padding: 10px;
   width: 300px;
   border: 2px solid #0080ff;
