--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -69,6 +69,8 @@ body {
   margin-top: 30px;
 }
 .form .login-container input,textarea {
+  background-color: transparent;
+  color: white;
   padding: 10px;
   width: 300px;
   border: 2px solid #0080ff;
