--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -80,12 +80,12 @@ body {
   &::placeholder {
     color: #777;
     letter-spacing: 1px;
-    font-family: "Open Sans"
   };
   font-weight: 600;
   margin-top: -18px;
   font-size: 18px;
   transition: 0.2s;
+  font-family: "Open Sans";
 }
 .form .login-container label {
   align-self: flex-start;
